# chiral-network

./: IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MANUAL_TESTING_GUIDE.md  README.md  REPUTATION_IMPLEMENTATION.md  TESTING.md  UPLOAD_TESTING_GUIDE.md  WALLET_RECOVERY_TEST.md  package-lock.json  package.json  run-bootstrap.sh
docs/: CONTENT_ADDRESSED_STORAGE.md  MINING_PERSISTENCE.md  MINING_PERSISTENCE_COMPARISON.md  README-storage-node.md  bootstrap-stability.md  dht-stability.md  index.md  keyword-indexing.md  keyword-search-api.md  nat-traversal.md  network-protocol.md  payment-notification-retry-reconciliation.md  payment-specification.md  reputation.md  spec-chunk-download.md  spec-chunk-reassembly-verification.md
docs/proposals/: ANALYSIS.md  README.md  SUMMARY.md  TESTING_GUIDE.md  multi-protocol-support.md
node/: Cargo.toml  README.md
node/src/: headless.rs  keystore.rs  lib.rs  main.rs  pool.rs
node/src/commands/: bootstrap.rs
src/: App.svelte
src-tauri/: Cargo.toml  README-CHIRAL-NODE.md  crypto.rs
src-tauri/src/: dht.rs  encryption.rs  file_handler.rs  file_transfer.rs  headless.rs  lib.rs  main.rs  manager.rs  market.rs  multi_source_download.rs  node.rs  path_tests.rs  pool_commands.rs  reputation.rs  reputation_old.rs  storage_node.rs  types.rs  webrtc_service.rs
src-tauri/src/commands/: auth.rs  bootstrap.rs  mod.rs  proxy.rs  reputation.rs
src/components/: ContentAddressedStorageDemo.svelte
src/lib/: contentAddressedStorage.ts  dht.ts  reputationStore.ts  stores.ts
src/lib/components/: ComplaintDialog.svelte  ReputationSettings.svelte  TransactionList.svelte
src/lib/components/download/: DownloadSearchSection.svelte
src/lib/components/network/: DHTStatus.svelte  GethNodeStatus.svelte  PeerList.svelte
src/lib/components/ui/: Pagination.svelte  (+1 more)
src/lib/services/: deploy.ts  fileService.ts  paymentService.ts  peerSelectionService.ts  reputationService.ts
src/lib/stores/: protocolStore.ts
src/lib/types/: reputation.ts
src/locales/: ar.json  bn.json  en.json  es.json  fr.json  hi.json  ko.json  pt.json  ru.json  zh.json
src/pages/: Account.svelte  Download.svelte  Network.svelte  Reputation.svelte  Settings.svelte  Upload.svelte
storage/src/: api.rs  chunks.rs  lib.rs
tests/: chunk_manager.rs  contentAddressedStorage.test.mjs  downloadSearch.test.ts  fileService.test.mjs  mining.test.ts  paymentService.test.ts  reputation-score.test.ts  storage_api.rs  uploadIntegration.test.mjs  walletRecovery.test.ts
(+1 files in other folders)
