[package]
name = "chiral-node"
version = "0.1.0"
description = "Chiral Network Node - Standalone node functionality"
authors = ["Chiral Network Team"]
license = "MIT"
edition = "2021"

[[bin]]
name = "chiral-node"
path = "src/main.rs"

[lib]
name = "chiral_node"
path = "src/lib.rs"

[dependencies]
# Core dependencies from chiral-network crate
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }

# Crypto and blockchain dependencies
secp256k1 = { version = "0.24", features = ["serde", "rand-std"] }
rand = { version = "0.8", features = ["std_rng"] }
ethers = "2.0"
hex = "0.4"
sha3 = "0.10"
sha2 = "0.10"
base64 = "0.21"
aes-gcm = "0.10"
x25519-dalek = { version = "2.0", features = ["serde", "static_secrets"] }
hkdf = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
aes = "0.8"
ctr = "0.9"
hmac = "0.12"

# File system and utilities
directories = "5.0"
fs2 = "0.4"
glob = "0.3"

# Networking
libp2p = { version = "0.54", features = ["kad", "mdns", "noise", "tcp", "yamux", "identify", "gossipsub", "macros", "tokio", "rsa", "request-response", "relay", "ping", "autonat", "dcutr"] }
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
futures = "0.3"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
tokio-socks = "0.5"

# TOTP
totp-rs = { version = "5.7.0", features = ["otpauth"] }

# Bitswap and related
beetswap = { git = "https://github.com/totoro-ming-lin/beetswap.git", branch = "older-version" }
multihash-codetable = { version = "0.1", features = ["blake3", "sha2", "sha3"] }
cid = { version = "0.11.1", features = ["serde-codec"] }
blockstore = "0.7.0"
rs_merkle = "1.5.0"

# WebRTC
webrtc = "0.10"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ed25519-dalek = { version = "2.0", features = ["rand_core", "serde"] }

# Compression
flate2 = "1.0"
tar = "0.4"
zip = "0.6"

# System information
systemstat = "0.2.5"
sysinfo = "0.31"

# Async
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.8"

[lints.rust]
unused_variables = "allow"
dead_code = "allow"
